Modifies the terminal background color

--- a/source/templates/terminal/style.css
+++ b/source/templates/terminal/style.css
@@ -53,7 +53,7 @@
     color: #DDDDDD;
   }
   pre {
-    background: #42092B;
+    background: #2f343d;
     padding: 12px;
     border-radius: 5px;
     border-top-left-radius: 0px;
